Added main banner, Adding services

--- a/src/style/scss/app.scss
+++ b/src/style/scss/app.scss
@@ -11,3 +11,7 @@
 @import 'style';
 @import 'saving-calculator';
 @import 'navigation/navbar';
+@import 'navigation/sidebar';
+
+@import 'banners/hero-section';
+@import 'banners/service-section';
