--- a/src/style/css/app.css
+++ b/src/style/css/app.css
@@ -9504,19 +9504,51 @@ body {
 
 @media screen and (min-width: 0) {
   body {
-    margin-top: 56px; } }
+    margin-top: 56px; }
+  .font-1 {
+    font-size: 2.6rem;
+    font-weight: bold;
+    letter-spacing: 3px; }
+  .font-3 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: 1px; } }
 
 @media screen and (min-width: 576px) {
   body {
-    margin-top: 56px; } }
+    margin-top: 56px; }
+  .font-1 {
+    font-size: 2.6rem;
+    font-weight: bold;
+    letter-spacing: 3px; }
+  .font-3 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    letter-spacing: 1px; } }
 
 @media screen and (min-width: 768px) {
   body {
-    margin-top: 64px; } }
+    margin-top: 64px; }
+  .font-1 {
+    font-size: 3rem;
+    font-weight: bold;
+    letter-spacing: 5px; }
+  .font-3 {
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 2px; } }
 
 @media screen and (min-width: 992px) {
   body {
-    margin-top: 72px; } }
+    margin-top: 72px; }
+  .font-1 {
+    font-size: 3.8rem;
+    font-weight: bold;
+    letter-spacing: 5px; }
+  .font-3 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    letter-spacing: 2px; } }
 
 .saving-box .result-box {
   max-height: 0;
@@ -9591,7 +9623,7 @@ body {
       display: inline-block;
       color: rgba(0, 0, 0, 0.6);
       font-size: 1rem;
-      float: left; }
+      position: absolute; }
       .custom-navbar .mobile-navbar .toggle-icon:hover {
         background-color: rgba(0, 0, 0, 0.1);
         color: #000;
@@ -9651,3 +9683,134 @@ body {
     display: block; }
   .custom-navbar .mobile-navbar {
     display: none; } }
+
+.custom-sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s; }
+  .custom-sidebar .sidebar-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px; }
+  .custom-sidebar .nav-item {
+    padding: 8px;
+    text-decoration: none;
+    color: #818181;
+    display: block;
+    cursor: pointer;
+    transition: 0.3s; }
+    .custom-sidebar .nav-item:hover, .custom-sidebar .nav-item:focus {
+      color: #f1f1f1; }
+  .custom-sidebar .closebtn {
+    position: absolute;
+    color: #818181;
+    cursor: pointer; }
+    .custom-sidebar .closebtn:hover, .custom-sidebar .closebtn:focus {
+      color: #f1f1f1; }
+
+@media screen and (min-width: 0) {
+  .custom-sidebar .nav-item {
+    font-size: 20px; }
+  .custom-sidebar .closebtn {
+    font-size: 30px;
+    top: 15px;
+    right: 35px; } }
+
+@media screen and (min-width: 576px) {
+  .custom-sidebar .nav-item {
+    font-size: 20px; }
+  .custom-sidebar .closebtn {
+    font-size: 30px;
+    top: 15px;
+    right: 35px; } }
+
+@media screen and (min-width: 768px) {
+  .custom-sidebar .nav-item {
+    font-size: 36px; }
+  .custom-sidebar .closebtn {
+    top: 20px;
+    right: 45px;
+    font-size: 40px; } }
+
+.hero-section {
+  position: relative; }
+  .hero-section::before {
+    opacity: 0.4;
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url("/images/banner-0.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
+  .hero-section .section-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+@media screen and (min-width: 0) {
+  .hero-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 576px) {
+  .hero-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 768px) {
+  .hero-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 992px) {
+  .hero-section .section-wrapper {
+    height: 100vh; } }
+
+.service-section {
+  position: relative; }
+  .service-section::before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff; }
+  .service-section .section-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+.services-list {
+  padding-left: 0; }
+  .services-list li {
+    list-style: none; }
+
+@media screen and (min-width: 0) {
+  .service-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 576px) {
+  .service-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 768px) {
+  .service-section .section-wrapper {
+    height: 100vh; } }
+
+@media screen and (min-width: 992px) {
+  .service-section .section-wrapper {
+    height: 100vh; } }
