--- a/src/style/scss/_style.scss
+++ b/src/style/scss/_style.scss
@@ -18,6 +18,18 @@ body {
     body {
         margin-top: $navbar-height-sm;
     }
+
+    .font-1 {
+        font-size: 2.6rem;
+        font-weight: bold;
+        letter-spacing: 3px;
+    }
+    
+    .font-3 {
+        font-size: 1.8rem;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
 }
 
 @media screen and (min-width: map-get($grid-breakpoints, 'sm')) {
@@ -26,6 +38,18 @@ body {
     body {
         margin-top: $navbar-height-sm;
     }
+
+    .font-1 {
+        font-size: 2.6rem;
+        font-weight: bold;
+        letter-spacing: 3px;
+    }
+    
+    .font-3 {
+        font-size: 1.8rem;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
 }
 
 @media screen and (min-width: map-get($grid-breakpoints, 'md')) {
@@ -33,11 +57,35 @@ body {
     body {
         margin-top: $navbar-height-md;
     }
+
+    .font-1 {
+        font-size: 3rem;
+        font-weight: bold;
+        letter-spacing: 5px;
+    }
+    
+    .font-3 {
+        font-size: 2rem;
+        font-weight: bold;
+        letter-spacing: 2px;
+    }
 }
 
 @media screen and (min-width: map-get($grid-breakpoints, 'lg')) {
     // Desktop
     body {
         margin-top: $navbar-height;
+    }
+
+    .font-1 {
+        font-size: 3.8rem;
+        font-weight: bold;
+        letter-spacing: 5px;
+    }
+    
+    .font-3 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        letter-spacing: 2px;
     }
 }
