--- a/src/style/scss/navigation/_navbar.scss
+++ b/src/style/scss/navigation/_navbar.scss
@@ -58,7 +58,7 @@
             display: inline-block;
             color: rgba($black, 0.6);
             font-size: 1rem;
-            float: left;
+            position: absolute;
 
             &:hover {
                 background-color: rgba($black, 0.1);
