--- a/src/style/scss/app.scss
+++ b/src/style/scss/app.scss
@@ -12,6 +12,7 @@
 @import 'saving-calculator';
 @import 'navigation/navbar';
 @import 'navigation/sidebar';
+@import 'banners/sections';
 
 @import 'banners/hero-section';
 @import 'banners/service-section';
