Added sections metano and gpl

--- a/src/style/scss/_saving-calculator.scss
+++ b/src/style/scss/_saving-calculator.scss
@@ -15,6 +15,15 @@
         padding: 0.25rem 1rem;
         font-weight: bold;
     }
+
+    .card-title {
+        font-size: 1.2rem;
+    }
+
+    .card-subtitle {
+        font-size: 0.9rem;
+        font-weight: 300;
+    }
 }
 
 .price-box {
