--- a/src/style/css/app.css
+++ b/src/style/css/app.css
@@ -9572,6 +9572,13 @@ body {
   padding: 0.25rem 1rem;
   font-weight: bold; }
 
+.saving-box .card-title {
+  font-size: 1.2rem; }
+
+.saving-box .card-subtitle {
+  font-size: 0.9rem;
+  font-weight: 300; }
+
 .price-box {
   border: 1px solid rgba(0, 0, 0, 0.1); }
   .price-box .head {
@@ -9750,11 +9757,17 @@ body {
     right: 45px;
     font-size: 40px; } }
 
-.section-header {
+.section .section-header {
   margin: 5rem 0 3rem 0;
   text-transform: uppercase;
   font-size: 2rem;
   letter-spacing: 5px; }
+
+.section .section-header-lateral {
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 5px;
+  margin: 3rem; }
 
 .hero-section {
   position: relative; }
@@ -9817,7 +9830,7 @@ body {
     font-size: 4rem;
     letter-spacing: 5px; }
   .service-item .service-head {
-    font-weight: 300;
+    font-weight: 100;
     font-size: 1.4rem;
     text-transform: uppercase;
     margin: 1rem 0;
@@ -9866,10 +9879,127 @@ body {
 
 @media screen and (min-width: 992px) {
   .service-section .section-wrapper {
-    min-height: 120vh; }
+    min-height: 100vh; }
   .service-item .service-number {
     text-align: center; }
   .service-item .service-head {
     text-align: center; }
   .service-item .services-list {
     padding: 0 30px; } }
+
+.metano-section,
+.gpl-section {
+  position: relative; }
+  .metano-section::before,
+  .gpl-section::before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #343a40; }
+  .metano-section .section-wrapper,
+  .gpl-section .section-wrapper {
+    margin: 0 auto; }
+  .metano-section .section-header-lateral,
+  .gpl-section .section-header-lateral {
+    margin-bottom: 2rem; }
+  .metano-section .sub-header,
+  .gpl-section .sub-header {
+    font-weight: 300;
+    font-size: 1.2rem; }
+  .metano-section .sub-section-content .content-value,
+  .gpl-section .sub-section-content .content-value {
+    font-weight: 100;
+    font-style: italic;
+    font-size: 0.9rem; }
+
+@media screen and (min-width: 0) {
+  .metano-section .margin-md-b-3rem,
+  .gpl-section .margin-md-b-3rem {
+    margin-bottom: 3rem; }
+  .metano-section .section-header-lateral,
+  .gpl-section .section-header-lateral {
+    margin-left: 1rem; }
+  .metano-section .section-content, .metano-section .section-content .container-fluid,
+  .gpl-section .section-content,
+  .gpl-section .section-content .container-fluid {
+    padding: 0; }
+  .metano-section .sub-section-content,
+  .gpl-section .sub-section-content {
+    padding: 0 1rem; }
+  .gpl-section {
+    margin-top: 80px; }
+  .video {
+    width: 100%;
+    height: 100%;
+    min-height: 350px;
+    max-height: 350px; } }
+
+@media screen and (min-width: 576px) {
+  .metano-section .margin-md-b-3rem,
+  .gpl-section .margin-md-b-3rem {
+    margin-bottom: 3rem; }
+  .metano-section .section-header-lateral,
+  .gpl-section .section-header-lateral {
+    margin-left: 1rem; }
+  .metano-section .section-content, .metano-section .section-content .container-fluid,
+  .gpl-section .section-content,
+  .gpl-section .section-content .container-fluid {
+    padding: 0; }
+  .metano-section .sub-section-content,
+  .gpl-section .sub-section-content {
+    padding: 0 1rem; }
+  .gpl-section {
+    margin-top: 80px; }
+  .video {
+    width: 100%;
+    height: 100%;
+    min-height: 350px;
+    max-height: 350px; } }
+
+@media screen and (min-width: 768px) {
+  .metano-section .margin-md-b-3rem,
+  .gpl-section .margin-md-b-3rem {
+    margin-bottom: 3rem; }
+  .metano-section .section-header-lateral,
+  .gpl-section .section-header-lateral {
+    margin-left: 0; }
+  .metano-section .section-content,
+  .gpl-section .section-content {
+    padding: 0 3rem; }
+  .metano-section .sub-section-content,
+  .gpl-section .sub-section-content {
+    padding: 0; }
+  .gpl-section {
+    margin-top: 80px; }
+  .video {
+    width: 100%;
+    height: 100%;
+    min-height: 450px;
+    max-height: 550px; } }
+
+@media screen and (min-width: 992px) {
+  .metano-section .section-content,
+  .gpl-section .section-content {
+    padding: 0 3rem; }
+  .metano-section .sub-section-content,
+  .gpl-section .sub-section-content {
+    padding: 0 3rem; }
+  .gpl-section {
+    margin-top: 150px; }
+    .gpl-section .section-header-lateral {
+      margin-left: 0; }
+    .gpl-section .sub-section-content {
+      padding-left: 0 !important; }
+  .metano-section .section-header-lateral {
+    margin-left: 3rem; }
+  .metano-section .sub-section-content {
+    padding-right: 0 !important; }
+  .video {
+    width: 100%;
+    height: 100%;
+    min-height: 450px;
+    max-height: 550px; } }
