--- a/src/style/scss/app.scss
+++ b/src/style/scss/app.scss
@@ -10,6 +10,7 @@
 // Custom
 @import 'style';
 @import 'saving-calculator';
+@import 'google-maps';
 @import 'navigation/navbar';
 @import 'navigation/sidebar';
 @import 'banners/sections';
@@ -17,3 +18,4 @@
 @import 'banners/hero-section';
 @import 'banners/service-section';
 @import 'banners/metano-gpl-section';
+@import 'banners/where-section';
