--- a/src/style/scss/_google-maps.scss
+++ b/src/style/scss/_google-maps.scss
@@ -1,6 +1,7 @@
 
 .map-container {
   width: 100%;
+  height: 100%;
   position: relative;
 
   .marker {
@@ -72,7 +73,7 @@
   // Mobile
 
   .map-container {
-    min-height: 65vh;
+    max-height: 65vh;
 
     .marker {
       .logo {
@@ -86,7 +87,7 @@
   // Mobile
 
   .map-container {
-    min-height: 65vh;
+    max-height: 65vh;
 
     .marker {
       .logo {
@@ -99,7 +100,7 @@
 @media screen and (min-width: map-get($grid-breakpoints, 'md')) {
   // Tablet
   .map-container {
-    min-height: 70vh;
+    max-height: 70vh;
 
     .marker {
       .logo {
@@ -112,7 +113,7 @@
 @media screen and (min-width: map-get($grid-breakpoints, 'lg')) {
   // Desktop
   .map-container {
-    min-height: 100vh;
+    max-height: 100vh;
 
     .marker {
       .logo {
