--- a/src/style/css/app.css
+++ b/src/style/css/app.css
@@ -9610,62 +9610,38 @@ body {
       opacity: 0.8; }
       .map-container .marker .logo:hover {
         opacity: 1; }
-  .map-container .info-window {
-    padding: 10px 15px;
-    background-color: #fff;
-    min-width: 300px;
-    width: 100%;
-    position: absolute;
-    bottom: 120%;
-    left: 50%;
-    margin-left: -150px;
-    z-index: 2;
-    cursor: initial; }
-    .map-container .info-window:after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -8px;
-      border: 8px solid transparent;
-      border-top-color: #ffffff; }
-    .map-container .info-window .close-icon {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      color: rgba(0, 0, 0, 0.7); }
-      .map-container .info-window .close-icon:hover {
-        color: #000; }
-    .map-container .info-window .address {
-      margin-bottom: 15px; }
-    .map-container .info-window .contacts {
-      margin-top: 15px; }
-      .map-container .info-window .contacts > p {
-        margin-bottom: 10px; }
+  .map-container .info-window .address {
+    margin-bottom: 15px; }
+  .map-container .info-window .contacts {
+    margin-top: 15px; }
+    .map-container .info-window .contacts > p {
+      margin-bottom: 10px; }
 
 @media screen and (min-width: 0) {
   .map-container {
-    max-height: 65vh; }
+    max-height: 65vh;
+    min-height: 65vh; }
     .map-container .marker .logo {
       width: 60px; } }
 
 @media screen and (min-width: 576px) {
   .map-container {
-    max-height: 65vh; }
+    max-height: 65vh;
+    min-height: 65vh; }
     .map-container .marker .logo {
       width: 60px; } }
 
 @media screen and (min-width: 768px) {
   .map-container {
-    max-height: 70vh; }
+    max-height: 70vh;
+    min-height: 70vh; }
     .map-container .marker .logo {
       width: 60px; } }
 
 @media screen and (min-width: 992px) {
   .map-container {
-    max-height: 100vh; }
+    max-height: 96vh;
+    min-height: 90vh; }
     .map-container .marker .logo {
       width: 60px; } }
 
@@ -10175,7 +10151,7 @@ body {
     .where-section .content .section-header {
       margin: 3rem 0 1.5rem 0; }
     .where-section .content .sub-section-header {
-      margin: 2rem 0 1.5rem 0; }
+      margin: 1rem 0 0.5rem 0; }
     .where-section .content .where-info {
       font-weight: 100;
       font-style: italic;
